feature: role module and schema add permission field
